Fixed spacing issue on service boxes. Also corrected hover color on primary buttons

--- a/sass/base/elements/_buttons.scss
+++ b/sass/base/elements/_buttons.scss
@@ -6,6 +6,12 @@ a {
     &:hover {
         color: $color__primary;
     }
+    &.btn-primary {
+        color: $color__light;
+    }
+    &.btn-primary:hover {
+        color: $color__light;
+    }
 }
 
 .btn {
